--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7b0d6e9f-e95b-47a6-9428-dc1d9adee3d4",
+   "metadata": {},
+   "source": [
+    "## lab 16 (intruduction to machine learning)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c2f43129-a203-4071-a4da-07da7cdf200a",
